<resources>
    <string name="app_name">Note It</string>
    <string name="LandingScreenMessage">Your ideas, thoughts, and creations—organized just the way you need.
Type, write, and create anytime, anywhere.</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email Address:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username:</string>
    <string name="create_an_account">Create an account</string>
    <string name="hi_welcome_back">Hi, Welcome Back 👋</string>
    <string name="instructions">Start organizing your thoughts, ideas, and tasks all in one place. Tap the + button to create your first note!</string>
    <string name="sign_out_confimation">Are you sure you want to sign out?</string>
    <string name="ledon_role">Lead Developer &amp; UI/UX Designer of Note It</string>
    <string name="ledon_introduction">Hi, I\'m a Computer Science student at Cebu Institute of Technology – University who sees coding as an art form. I’m passionate about creating intuitive and user-friendly applications, seamlessly blending design and functionality to enhance digital experiences. As an aspiring full-stack developer, I enjoy working on both the front-end and back-end, bringing ideas to life through code.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="app_desc">Note It is your personal space for capturing thoughts and managing daily tasks effortlessly. Developed as the final project for CSIT284 - Platform Based Development (Mobile), this app helps you create detailed notes and simple to-do lists to keep everything organized. We hope Note It helps streamline your thoughts and tasks effectively.</string>
</resources>