<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".activities.EditProfileActivity">

    <ImageButton
        android:id="@+id/btnBack_to_main"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:scaleType="centerInside"
        android:padding="12dp"
        android:src="@drawable/back2"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profilePicture"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:text="Edit Profile"
        android:textSize="26sp"
        android:fontFamily="@font/ritam_sans_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btnBack_to_main"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id = "@+id/profilePicture"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/gray"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile_picture"
        android:background="@drawable/shape_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack_to_main"
        app:layout_constraintBottom_toTopOf="@id/profileSettingsView"
        />

    <ImageButton
        android:id="@+id/btnChangeProfile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerInside"
        android:background="@drawable/shape_circle"
        android:translationX="-45dp"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@id/profilePicture"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        />

    <!--edit profile-->


    <!--Username-->
    <View
        android:id="@+id/profileSettingsView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_shape4"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileSettingsView"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp">

            <TextView
                android:id = "@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/editTextUsername"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:fontFamily="@font/ritam_sans_demibold"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/editTextUsername"
                />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_editbox1"
                android:inputType="text"
                android:hint="@string/enter_your_username"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/ritam_sans_medium"
                android:textSize="16sp"
                app:layout_constraintWidth_percent="0.76"
                app:layout_constraintTop_toTopOf= "parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf= "parent"
                app:layout_constraintBottom_toTopOf="@id/editTextEmail"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <!--Email-->
            <TextView
                android:id = "@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/editTextEmail"
                android:text="@string/email_address"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:fontFamily="@font/ritam_sans_demibold"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/editTextEmail"/>

            <EditText
                android:id = "@+id/editTextEmail"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_editbox1"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/ritam_sans_medium"
                android:textSize="16sp"

                app:layout_constraintWidth_percent="0.76"
                app:layout_constraintStart_toStartOf= "parent"
                app:layout_constraintTop_toBottomOf= "@id/editTextUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextOldPassword"/>

            <!--    Password-->

            <TextView
                android:id = "@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/editTextOldPassword"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/ritam_sans_demibold"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/editTextOldPassword"
                />

            <EditText
                android:id = "@+id/editTextOldPassword"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_editbox1"
                android:hint="@string/enter_your_password"
                android:fontFamily="@font/ritam_sans_medium"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"

                app:layout_constraintWidth_percent="0.76"
                app:layout_constraintTop_toBottomOf= "@id/editTextEmail"
                app:layout_constraintStart_toStartOf= "parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextNewPassword"/>

            <!--   Confirm Password-->

            <TextView
                android:id = "@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/editTextNewPassword"
                android:text="New Password"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/ritam_sans_demibold"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/editTextNewPassword"
                />

            <EditText
                android:id = "@+id/editTextNewPassword"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_editbox1"
                android:hint="Enter your new password"
                android:fontFamily="@font/ritam_sans_medium"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                app:layout_constraintWidth_percent="0.76"
                app:layout_constraintTop_toBottomOf= "@id/editTextOldPassword"
                app:layout_constraintStart_toStartOf= "parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextConfirmPassword"/>

            <TextView
                android:id = "@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/editTextConfirmPassword"
                android:text="Confirm Password"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/ritam_sans_demibold"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
                />

            <EditText
                android:id = "@+id/editTextConfirmPassword"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_editbox1"
                android:hint="Confirm password"
                android:fontFamily="@font/ritam_sans_medium"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="16sp"
                app:layout_constraintWidth_percent="0.76"
                app:layout_constraintTop_toBottomOf= "@+id/editTextNewPassword"
                app:layout_constraintStart_toStartOf= "parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/group1"/>

            <LinearLayout
                android:id="@+id/group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSaveChanges"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:minWidth="120dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="5dp"
                    android:text="Save Changes"
                    android:textColor="@color/white"
                    android:backgroundTint="#198855"
                    android:background="@drawable/custom_button1"
                    android:textAllCaps="false"
                    />

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:minWidth="120dp"
                    android:layout_height="48dp"
                    android:text="Change Password"
                    android:textColor="@color/white"
                    android:backgroundTint="#dc3544"
                    android:background="@drawable/custom_button1"
                    android:textAllCaps="false"
                    android:layout_marginStart="5dp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>












</androidx.constraintlayout.widget.ConstraintLayout>