<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/register_illustration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"

        android:layout_marginTop="10dp"
        android:src="@drawable/sign_in_screen_illustration"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <View
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_shape1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ritam_sans_bold"
        android:text="@string/hi_welcome_back"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_view"
        app:layout_constraintBottom_toTopOf="@id/editTextUsername"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <!--Email-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/ritam_sans_demibold"
        android:text="Username"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_editbox1"
        android:fontFamily="@font/ritam_sans_medium"
        android:hint="Enter your username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintWidth_percent="0.76" />

    <!--    Password-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/ritam_sans_demibold"
        android:text="@string/password"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_editbox1"
        android:fontFamily="@font/ritam_sans_medium"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintWidth_percent="0.76" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/ritam_sans_bold"
        android:gravity="center"
        android:text="Sign in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="@id/linearGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintWidth_percent="0.26" />

    <LinearLayout
        android:id="@+id/linearGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        >

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/ritam_sans_medium"
            android:text="Don't have an account?"

            android:textColor="@color/gray"
            android:textSize="16sp" />  <!-- Space between the two texts -->

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ritam_sans_demibold"
            android:text="Sign up"
            android:textColor="@color/black"
            android:textSize="16sp" />  <!-- Space between the two texts -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>